--- a/CSS/main-styles.css
+++ b/CSS/main-styles.css
@@ -66,6 +66,29 @@ ul {
     text-shadow: 0 0 15px var(--secondary-text);
 }
 
+.scrollToTopButton {
+    background-color: #0000007f;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 99;
+    font-size: 18px;
+    border: 5px double var(--highlighted-button);
+    color: white;
+    cursor: pointer;
+    padding: 8px;
+    border-radius: 50%;
+    transition: 0.3s;
+    box-shadow: 0 0 8px var(--highlighted-button);
+}
+
+.scrollToTopButton:hover {
+    border: 5px solid var(--highlighted-button);
+    box-shadow: 0 0 15px var(--highlighted-button);
+    color: var(--highlighted-button);
+    padding: 10px;
+}
+
 
 /* Header */
 
@@ -130,6 +153,8 @@ header {
     border-left: none;
     box-shadow: 0px 0px 15px var(--secondary-text);
     color: var(--secondary-text);
+    font-size: 27px;
+    padding: 5px 25px;
 }
 
 .main-nav-list {
@@ -161,6 +186,8 @@ header {
 
 .main-nav-list li:hover a {
     color: var(--secondary-text);
+    padding: 8px 12px;
+    font-size: 20px;
 }
 
 .main-nav-list .plans {
@@ -376,6 +403,8 @@ footer {
 .footer-nav-list a:hover {
     color: var(--secondary-text);
     text-shadow: 0px 0px 10px var(--secondary-text);
+    font-weight: bold;
+    font-size: 18px;
 }
 
 .social,
