--- a/CSS/main-styles.css
+++ b/CSS/main-styles.css
@@ -66,27 +66,46 @@ ul {
     text-shadow: 0 0 15px var(--secondary-text);
 }
 
-.scrollToTopButton {
-    background-color: #0000007f;
+.controls {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
     position: fixed;
     bottom: 20px;
     right: 20px;
-    z-index: 99;
+    z-index: 100;
+}
+
+.controls .scrollBtn:first-child {
+    margin-bottom: -50px;
+}
+
+.scrollBtn {
+    background-color: #0000007f;
     font-size: 18px;
     border: 5px double var(--highlighted-button);
     color: white;
     cursor: pointer;
-    padding: 8px;
+    padding: 5px;
     border-radius: 50%;
     transition: 0.3s;
     box-shadow: 0 0 8px var(--highlighted-button);
+    opacity: 0;
+    visibility: hidden;
 }
 
-.scrollToTopButton:hover {
+.scrollBtn:hover {
     border: 5px solid var(--highlighted-button);
     box-shadow: 0 0 15px var(--highlighted-button);
     color: var(--highlighted-button);
-    padding: 10px;
+    padding: 8px;
+}
+
+.scrollBtn.active {
+    opacity: 1;
+    visibility: visible;
 }
 
 
