--- a/CSS/main-styles.css
+++ b/CSS/main-styles.css
@@ -112,10 +112,12 @@ ul {
 /* Header */
 
 header {
-    position: relative;
+    position: fixed;
+    width: 100%;
     box-shadow: 0px 0 50px var(--secondary-text);
-    z-index: 2;
+    z-index: 100;
     background: url(../Images/coffee-beans.png);
+    background-color: var(--primary-backgroud);
     background-size: cover;
     background-position: center;
 }
@@ -124,8 +126,8 @@ header {
     content: '';
     position: absolute;
     inset: 0;
-    background-color: #0000007f;
     border-bottom: 3px double var(--secondary-text);
+    background-color: #0000007f;
 }
 
 .main-nav {
@@ -151,7 +153,7 @@ header {
     font-weight: bold;
     padding: 5px 15px;
     color: var(--primary-text);
-    border: 5px double var(--secondary-text);
+    border: 5px double var(--highlighted-button);
     border-left: none;
     border-radius: 20px;
     margin-left: -5px;
@@ -162,16 +164,20 @@ header {
     width: 50px;
     height: 50px;
     padding: 5px;
-    border: 5px double var(--secondary-text);
+    border: 5px solid var(--highlighted-button);
     border-radius: 50%;
     pointer-events: none;
 }
 
+.title-img {
+    box-shadow: 0px 0px 15px var(--highlighted-button);
+}
+
 .title:hover {
-    border: 5px solid var(--secondary-text);
+    border: 5px solid var(--highlighted-button);
     border-left: none;
-    box-shadow: 0px 0px 15px var(--secondary-text);
-    color: var(--secondary-text);
+    box-shadow: 0px 0px 15px var(--highlighted-button);
+    color: var(--highlighted-button);
     font-size: 27px;
     padding: 5px 25px;
 }
@@ -210,22 +216,21 @@ header {
 }
 
 .main-nav-list .plans {
-    border: 5px double var(--highlighted-button);
+    border: 5px solid var(--highlighted-button);
     box-shadow: 0px 0px 15px var(--highlighted-button);
     transition: 0.3s;
 }
 
 .main-nav-list .plans:hover {
-    box-shadow: 0px 0px 15px var(--secondary-text);
     box-shadow: 0px 0px 20px var(--highlighted-button);
-    border: 5px solid var(--highlighted-button);
+    border-color: var(--highlighted-button);
 }
 
 .plans a {
     transition: 0.3s;
 }
 
-.plans:hover a {
+.main-nav-list .plans:hover a {
     color: var(--highlighted-button);
 }
 
@@ -235,9 +240,11 @@ header {
 .showcase {
     position: relative;
     overflow: hidden;
+    padding-top: 100px;
 }
 
 .showcase-title-container {
+    margin-top: 100px;
     position: absolute;
     z-index: 1;
     inset: 0 0 auto 0;
@@ -245,7 +252,7 @@ header {
 }
 
 .showcase-content {
-    padding: 5px;
+    padding: 1px 0;
     width: 100%;
     height: 100vh;
     position: relative;
@@ -313,28 +320,29 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 5px 10px;
-    background-color: var(--primary-backgroud);
-    border: 5px double var(--secondary-text);
+    background-color: #0000007f;
+    border: 5px solid var(--highlighted-button);
     border-radius: 20px;
     transition: 0.3s;
+    box-shadow: 5px 5px 15px var(--primary-backgroud);
 }
 
 .showcase-slides:hover {
-    border: 5px solid var(--secondary-text);
-    box-shadow: 0px 0px 10px var(--secondary-text);
+    box-shadow: 0px 0px 10px var(--highlighted-button);
 }
 
 .showcase-slider-button {
     font-weight: bold;
-    padding: 12px 15px;
-    border-radius: 20px;
-    border: 5px double var(--secondary-text);
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    border: 5px solid var(--highlighted-button);
     margin: 0 15px;
-    background-color: var(--primary-backgroud);
+    background-color: #0000007f;
     color: var(--primary-text);
     cursor: pointer;
     transition: 0.3s;
+    box-shadow: 5px 5px 15px var(--primary-backgroud);
 }
 
 .showcase-slide input {
@@ -365,9 +373,9 @@ header {
 }
 
 .showcase-slider-button:hover {
-    border: 5px solid var(--secondary-text);
-    color: var(--secondary-text);
-    box-shadow: 0px 0px 10px var(--secondary-text);
+    border: 5px solid var(--highlighted-button);
+    color: var(--highlighted-button);
+    box-shadow: 0px 0px 10px var(--highlighted-button);
 }
 
 
