--- a/CSS/main-styles.css
+++ b/CSS/main-styles.css
@@ -300,7 +300,7 @@ header {
     line-height: 25px;
 }
 
-.drink-title {
+.showcase .drink-title {
     font-family: var(--secondary-font);
     font-size: 45px;
     text-shadow: 0 0 15px var(--secondary-text);
@@ -376,6 +376,74 @@ header {
     border: 5px solid var(--highlighted);
     color: var(--highlighted);
     box-shadow: 0px 0px 10px var(--highlighted);
+}
+
+/* Drinks */
+
+.drinks {
+    position: relative;
+    overflow: hidden;
+    background: url(../Images/americano.png);
+    background-size: cover;
+    background-position: center;
+    box-shadow: 0px 0 50px var(--secondary-text);
+}
+
+.drinks-title-container {
+    position: absolute;
+    text-align: center;
+    inset: 0 0 auto 0;
+    background-color: #0000007f;
+    min-height: 85px;
+}
+
+.drinks-title {
+    font-size: 25px;
+    padding: 25px 0;
+    text-align: center;
+}
+
+.drinks-content {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.drinks-list {
+    display: flex;
+    justify-content: center;
+    gap: 25px;
+    margin-top: 50px;
+    align-items: stretch;
+}
+
+.drink {
+    text-align: center;
+    padding: 10px;
+    margin: 5px 0;
+    border-radius: 25px;
+    background-color: rgba(20, 10, 5, 0.9);
+    box-shadow: 5px 5px 15px var(--primary-backgroud);
+}
+
+.drinks .drink-title {
+    font-family: var(--secondary-font);
+    font-size: 30px;
+    margin: 5px;
+    text-shadow: 0 0 15px var(--secondary-text);
+}
+
+.drink img {
+    width: 250px;
+}
+
+.drink-description {
+    max-width: 240px;
+    word-wrap: break-word;
+    text-align: center;
+    margin: 10px auto;
 }
 
 
