--- a/CSS/main-styles.css
+++ b/CSS/main-styles.css
@@ -401,7 +401,7 @@ header:hover {
 .drinks {
     position: relative;
     overflow: hidden;
-    background: url(../Images/americano.png);
+    background: url(../Images/coffee-background.jpg);
     background-size: cover;
     background-position: center;
     box-shadow: 0px 0 50px var(--secondary-text);
@@ -448,30 +448,43 @@ header:hover {
 
 .drink {
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 250px;
+    min-height: 200px;
     padding: 10px;
     margin: 5px 0;
     border-radius: 25px;
     background-color: #160900cc;
-    box-shadow: 5px 5px 15px var(--primary-backgroud);
+    box-shadow: 10px 10px 20px var(--primary-backgroud);
     position: relative;
     transition: 0.3s;
-    border: 2px solid var(--highlighted);
+    cursor: pointer;
+}
+
+.drinks .drink-title {
+    font-family: var(--secondary-font);
+    font-size: 35px;
+    text-shadow: 0 0 10px var(--highlighted);
+    position: absolute;
+    z-index: 1;
+    padding: 10px 15px;
+    background-color: #0000007f;
+    border-radius: inherit;
 }
 
 .drink:hover {
     transform: scale(1.03);
 }
 
-.drinks .drink-title {
-    font-family: var(--secondary-font);
-    font-size: 30px;
-    margin: 5px;
-    text-shadow: 0 0 15px var(--secondary-text);
-}
-
 .drink img {
-    width: 250px;
-    border-radius: 10px;
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: inherit;
 }
 
 .drink-description {
@@ -487,7 +500,7 @@ header:hover {
     bottom: -20px;
     left: 75px;
     right: 75px;
-    background-color: #0000007f;
+    background-color: #160900;
     font-family: var(--secondary-font);
     font-size: 20px;
     color: var(--primary-text);
@@ -497,6 +510,7 @@ header:hover {
     cursor: pointer;
     box-shadow: 0 0 15px var(--highlighted);
     transition: 0.3s;
+    z-index: 1;
 }
 
 .drink-description-button:hover {
@@ -555,7 +569,7 @@ footer:hover {
     display: flex;
     flex-direction: column;
     text-align: left;
-    margin: 5px 25px;
+    margin: 5px 15px;
 }
 
 .footer-nav-list a {
